# DFC

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
match/: config.hpp  data-file.hpp  helpers.cpp  helpers.hpp  main.cpp  pattern-file.hpp
scripts/: benchmark.sh  test.sh
src/: bm-compact-table.cpp  bm-ct.cpp  bm-df-collection.cpp  bm-df-initializer.cpp  bm-df.cpp  bm-direct-filter-collection.cpp  bm-direct-filter.cpp  bm-execution-loop.cpp  bm-flat-direct-filter.cpp  bm-indexer.cpp  bm-layered-direct-filter.cpp  bm-match-path.cpp  byte.hpp  character-transformer.hpp  compact-table.hpp  ct-initializer.hpp  ct.hpp  df-collection.hpp  df-initializer.hpp  df-interface.hpp  df-masker.hpp  df.hpp  direct-filter-collection.hpp  direct-filter-masker.hpp  direct-filter.hpp  execution-loop.hpp  flat-direct-filter.hpp  immutable-pattern.hpp  indexer.hpp  input-view.hpp  is-compact-table.hpp  is-df.hpp  is-direct-filter.hpp  is-pattern-range.hpp  layered-direct-filter.hpp  match-path.hpp  matcher.hpp  on-matcher.hpp  pattern-aggregator.cpp  pattern-aggregator.hpp  (+29 more)
